--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,15 @@
             <artifactId>spark-sql_2.11</artifactId>
             <version>2.2.0</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.mongodb.spark/mongo-spark-connector -->
+        <dependency>
+            <groupId>org.mongodb.spark</groupId>
+            <artifactId>mongo-spark-connector_2.11</artifactId>
+            <version>2.2.7</version>
+        </dependency>
+
     </dependencies>
+
 
 </project>
